--- a/Driver/YOY/CD/YOY_CD_Allowances.html
+++ b/Driver/YOY/CD/YOY_CD_Allowances.html
@@ -52,26 +52,22 @@
     <Table class = "style2">
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Tab:</b></td>
-          <td class = "style3">ByGM</td></tr>
+          <td class = "style3">Driver</td></tr>
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Table:</b></td>
-          <td class = "style3">Mail Processing</td></tr>								
+          <td class = "style3">Collection & Delivery</td></tr>								
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Line Item:</b></td>
-          <td class = "style3">  Non Plant (Hours Worked) </td></tr>	
+          <td class = "style3"> Allowances / Other</td></tr>		
         <tr class = "style2">
             <td class = "style3" align = "right"><b>Data Type:</b></td>
-            <td class = "style3"> YOY Dollars  </td></tr>	
+            <td class = "style3"> YOY Dollars  </td></tr>
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="YOY_MP_PlantPerformance.html">[Plant Performance & Labour Mix]</a>
-        + [MP Plant Initiatives]*</a>
-        + [Plant Volume Mix]*</a>
-        + [Other Investments]*</a>      
+        <i>Value = <b><a href="YOY_CD_RemainAllow.html">[Remaining Allowances]</a>
+            + <a href="YOY_CD_Grievances.html">[Grievances / Pay inlieu]</a>
+            + <a href="YOY_CD_OtherCostPressures.html">[Other Cost Pressures / Savings]</a>
         </b></i>
-        <br>
-        <br>
-        <i>* - only affected by plan variance and not year-over-year dollar variance (is zero for year-over-year).</i>
     </p>														
 </body>	
 </html>
