--- a/Driver/YOY/CD/YOY_CD_RateVar.html
+++ b/Driver/YOY/CD/YOY_CD_RateVar.html
@@ -58,15 +58,16 @@
           <td class = "style3">Collection & Delivery</td></tr>								
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Line Item:</b></td>
-          <td class = "style3">Absences</td></tr>	
+          <td class = "style3">  Rate Variances </td></tr>	
         <tr class = "style2">
             <td class = "style3" align = "right"><b>Data Type:</b></td>
             <td class = "style3"> YOY Dollars  </td></tr>	
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="YOY_CD_AbsenceHours.html">[Absence Hours]</a>
-            + <a href="YOY_CD_STDP.html">[STDP PD Payout / Accrual]</a>
+        <i>Value = <b><a href="YOY_CD_Wage.html">[Wage Increase]</a>
+        + <a href="YOY_CD_RateOther.html">[Rate Other]</a>
+        + [Timing - Non Hours Related]
+        + <a href="YOY_CD_Allowances.html">[Allowances / Other]</a>
         </b></i>
     </p>														
 </body>	
-</html>
