--- a/Driver/YOY/CD/YOY_CD_Reorg.html
+++ b/Driver/YOY/CD/YOY_CD_Reorg.html
@@ -52,19 +52,25 @@
     <Table class = "style2">
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Tab:</b></td>
-          <td class = "style3">ByGM</td></tr>
+          <td class = "style3">Driver</td></tr>
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Table:</b></td>
-          <td class = "style3">Mail Processing</td></tr>								
+          <td class = "style3">Collection & Delivery</td></tr>								
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Line Item:</b></td>
-          <td class = "style3"> Grievances / Pay inlieu </td></tr>	
+          <td class = "style3">  Reorg & Coding </td></tr>	
         <tr class = "style2">
             <td class = "style3" align = "right"><b>Data Type:</b></td>
             <td class = "style3"> YOY Dollars  </td></tr>	
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="../../../Dollars/MP/OthLab/D_MP_OthLab_RR.html">[Other Labour - Residual Rate & Allowances]</a>
+        <i>Value = <b>[Transfers within Region]*
+            + [PY / CY Non-Recurring]*
+            + <a href="YOY_CD_TransfersOutsideRegion.html">[Transfers outside region/Others]</a>
         </b></i>
+        <br>
+        <br>
+        <i>* - currently zero</i>
     </p>														
 </body>	
+</html>
