--- a/Driver/YOY/CD/YOY_CD_TotalVar.html
+++ b/Driver/YOY/CD/YOY_CD_TotalVar.html
@@ -52,23 +52,22 @@
     <Table class = "style2">
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Tab:</b></td>
-          <td class = "style3">ByGM</td></tr>
+          <td class = "style3">Driver</td></tr>
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Table:</b></td>
-          <td class = "style3">Mail Processing</td></tr>								
+          <td class = "style3">Collection & Delivery</td></tr>								
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Line Item:</b></td>
-          <td class = "style3">  Transfers Outside Region/Other </td></tr>	
+          <td class = "style3">  Total Variances </td></tr>	
         <tr class = "style2">
             <td class = "style3" align = "right"><b>Data Type:</b></td>
             <td class = "style3"> YOY Dollars  </td></tr>	
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="../../../Dollars/MP/HoursWorked/D_MP_HrWk_Reorg.html">[Hours Worked - Reorg & Coding]</a>
-        + <a href="../../../Dollars/MP/Absences/D_MP_PdAbs_Reorg.html">[Absences - Reorg & Coding]</a>
-        + <a href="../../../Dollars/MP/Vacation/D_MP_Vac_Reorg.html">[Vacation - Reorg & Coding]</a>
-        + <a href="../../../Dollars/MP/Training+UnionLeaves/D_MP_Train_Reorg.html">[Training & Union Leaves - Reorg & Coding]</a>
-        + <a href="../../../Dollars/MP/StatHolidays/D_MP_Stat_Reorg.html">[Stat Holidays - Reorg & Coding]</a>       
+        <i>Value = <b><a href="YOY_CD_UsageVar.html">[Usage Variances]</a>
+            + <a href="YOY_CD_RateVar.html">[Rate Variances]</a>
+            + <a href="YOY_CD_DaysVar.html">[Days Variances]</a>
         </b></i>
-    </p>													
+    </p>														
 </body>	
+</html>
