--- a/Driver/YOY/CD/YOY_CD_Training.html
+++ b/Driver/YOY/CD/YOY_CD_Training.html
@@ -52,22 +52,20 @@
     <Table class = "style2">
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Tab:</b></td>
-          <td class = "style3">ByGM</td></tr>
+          <td class = "style3">Driver</td></tr>
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Table:</b></td>
-          <td class = "style3">Mail Processing</td></tr>								
+          <td class = "style3">Collection & Delivery</td></tr>								
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Line Item:</b></td>
-          <td class = "style3">  Rate Variances </td></tr>	
+          <td class = "style3">  Training & Union Leaves </td></tr>	
         <tr class = "style2">
             <td class = "style3" align = "right"><b>Data Type:</b></td>
             <td class = "style3"> YOY Dollars  </td></tr>	
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="YOY_MP_Wage.html">[Wage Increase]</a>
-        + <a href="YOY_MP_RateOther.html">[Rate Other]</a>
-        + [Timing - Non Hours Related]
-        + <a href="YOY_MP_Allowances.html">[Allowances / Other]</a>
+        <i>Value = <b><a href="../../../Dollars/CD/Training+UnionLeaves/D_CD_Train_Train.html">[Training & Union Leaves]</a>
         </b></i>
     </p>														
 </body>	
+</html>
