--- a/Driver/YOY/CD/YOY_CD_Vacation.html
+++ b/Driver/YOY/CD/YOY_CD_Vacation.html
@@ -52,22 +52,19 @@
     <Table class = "style2">
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Tab:</b></td>
-          <td class = "style3">ByGM</td></tr>
+          <td class = "style3">Driver</td></tr>
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Table:</b></td>
-          <td class = "style3">Mail Processing</td></tr>								
+          <td class = "style3">Collection & Delivery</td></tr>								
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Line Item:</b></td>
-          <td class = "style3"> Allowances / Other</td></tr>		
+          <td class = "style3">  Vacation </td></tr>	
         <tr class = "style2">
             <td class = "style3" align = "right"><b>Data Type:</b></td>
-            <td class = "style3"> YOY Dollars  </td></tr>
+            <td class = "style3"> YOY Dollars  </td></tr>	
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="YOY_MP_RemainAllow.html">[Remaining Allowances]</a>
-            + <a href="YOY_MP_Grievances.html">[Grievances / Pay inlieu]</a>
-            + <a href="YOY_MP_OtherCostPressures.html">[Other Cost Pressures / Savings]</a>
+        <i>Value = <b><a href="../../../Dollars/CD/Vacation/D_CD_Vac_Vac.html">[Vacation]</a>
         </b></i>
-    </p>														
+    </p>													
 </body>	
-</html>
