--- a/Driver/YOY/CD/YOY_CD_DaysVar.html
+++ b/Driver/YOY/CD/YOY_CD_DaysVar.html
@@ -52,19 +52,21 @@
     <Table class = "style2">
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Tab:</b></td>
-          <td class = "style3">ByGM</td></tr>
+          <td class = "style3">Driver</td></tr>
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Table:</b></td>
-          <td class = "style3">Mail Processing</td></tr>								
+          <td class = "style3">Collection & Delivery</td></tr>								
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Line Item:</b></td>
-          <td class = "style3">  Vacation </td></tr>	
+          <td class = "style3"> Days Variances  </td></tr>		
         <tr class = "style2">
             <td class = "style3" align = "right"><b>Data Type:</b></td>
-            <td class = "style3"> YOY Dollars  </td></tr>	
+            <td class = "style3"> YOY Dollars  </td></tr>
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="../../../Dollars/MP/Vacation/D_MP_Vac_Vac.html">[Vacation]</a>
+        <i>Value = <b><a href="YOY_CD_Days.html">[Days Adjustments]</a>
+            + <a href="YOY_CD_TradeDays.html">[Trade Days Adj]</a>
         </b></i>
-    </p>													
+    </p>														
 </body>	
+</html>
