--- a/Driver/YOY/CD/YOY_CD_Grievances.html
+++ b/Driver/YOY/CD/YOY_CD_Grievances.html
@@ -52,25 +52,19 @@
     <Table class = "style2">
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Tab:</b></td>
-          <td class = "style3">ByGM</td></tr>
+          <td class = "style3">Driver</td></tr>
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Table:</b></td>
-          <td class = "style3">Mail Processing</td></tr>								
+          <td class = "style3">Collection & Delivery</td></tr>								
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Line Item:</b></td>
-          <td class = "style3"> Days Adjustments  </td></tr>	
+          <td class = "style3"> Grievances / Pay inlieu </td></tr>	
         <tr class = "style2">
             <td class = "style3" align = "right"><b>Data Type:</b></td>
             <td class = "style3"> YOY Dollars  </td></tr>	
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="../../../Dollars/MP/HoursWorked/D_MP_HrWk_Days.html">[Hours Worked - Days Adjustments]</a>
-        + <a href="../../../Dollars/MP/Absences/D_MP_PdAbs_Days.html">[Absences - Days Adjustments]</a>
-        + <a href="../../../Dollars/MP/Vacation/D_MP_Vac_Days.html">[Vacation - Days Adjustments]</a>
-        + <a href="../../../Dollars/MP/Training+UnionLeaves/D_MP_Train_Days.html">[Training & Union Leaves - Days Adjustments]</a>
-        + <a href="../../../Dollars/MP/StatHolidays/D_MP_Stat_Days.html">[Stat Holidays - Days Adjustments]</a>
-        + <a href="../../../Dollars/MP/OtherAllow/D_MP_othAllw_NPHW.html">[Sh Diff, WE Prem & Others - Days Adjustments]</a>       
+        <i>Value = <b><a href="../../../Dollars/MP/OthLab/D_MP_OthLab_RR.html">[Other Labour - Residual Rate & Allowances]</a>
         </b></i>
-    </p>													
+    </p>														
 </body>	
-</html>
