--- a/Driver/YOY/CD/YOY_CD_RemainAllow.html
+++ b/Driver/YOY/CD/YOY_CD_RemainAllow.html
@@ -58,14 +58,15 @@
           <td class = "style3">Collection & Delivery</td></tr>								
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Line Item:</b></td>
-          <td class = "style3">Absences</td></tr>	
+          <td class = "style3"> Remaining Allowances</td></tr>	
         <tr class = "style2">
             <td class = "style3" align = "right"><b>Data Type:</b></td>
             <td class = "style3"> YOY Dollars  </td></tr>	
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="YOY_CD_AbsenceHours.html">[Absence Hours]</a>
-            + <a href="YOY_CD_STDP.html">[STDP PD Payout / Accrual]</a>
+        <i>Value = <b><a href="../../../Dollars/MP/Route/D_MP_Route_RR.html">[Over Assessed Routes - Residual Rate & Allowances]</a>
+        + <a href="../../../Dollars/MP/RestBG/D_MP_RestBG_RR.html">[Rest period and B&G - Residual Rate & Allowances]</a>
+        + <a href="../../../Dollars/MP/OtherAllow/D_MP_othAllw_RR.html">[Sh Diff, WE Prem & Others - Residual Rate & Allowances]</a>
         </b></i>
     </p>														
 </body>	
