--- a/Driver/YOY/CD/YOY_CD_TradeDays.html
+++ b/Driver/YOY/CD/YOY_CD_TradeDays.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -52,23 +53,24 @@
     <Table class = "style2">
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Tab:</b></td>
-          <td class = "style3">ByGM</td></tr>
+          <td class = "style3">Driver</td></tr>
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Table:</b></td>
-          <td class = "style3">Mail Processing</td></tr>								
+          <td class = "style3">Collection & Delivery</td></tr>								
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Line Item:</b></td>
-          <td class = "style3">  Rate Other </td></tr>	
+          <td class = "style3">  Trade Days Adj </td></tr>	
         <tr class = "style2">
             <td class = "style3" align = "right"><b>Data Type:</b></td>
             <td class = "style3"> YOY Dollars  </td></tr>	
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="../../../Dollars/MP/HoursWorked/D_MP_HrWk_RR.html">[Hours Worked - Residual Rate & Allowances]</a>
-        + <a href="../../../Dollars/MP/Absences/D_MP_PdAbs_RR.html">[Absences - Residual Rate & Allowances]</a>
-        + <a href="../../../Dollars/MP/Vacation/D_MP_Vac_RR.html">[Vacation - Residual Rate & Allowances]</a>
-        + <a href="../../../Dollars/MP/Training+UnionLeaves/D_MP_Train_RR.html">[Training & Union Leaves - Residual Rate & Allowances]</a>   
-        + <a href="../../../Dollars/MP/StatHolidays/D_MP_Stat_RR.html">[Stat Holidays - Residual Rate & Allowances]</a>   
+        <i>Value = <b><a href="../../../Dollars/MP/HoursWorked/D_MP_HrWk_TradeDays.html">[Hours Worked - Trade Days Adj]</a>
+        + <a href="../../../Dollars/MP/Absences/D_MP_PdAbs_TradeDays.html">[Absences - Trade Days Adj]</a>
+        + <a href="../../../Dollars/MP/Vacation/D_MP_Vac_TradeDays.html">[Vacation - Trade Days Adj]</a>
+        + <a href="../../../Dollars/MP/Training+UnionLeaves/D_MP_Train_TradeDays.html">[Training & Union Leaves - Trade Days Adj]</a>
+        + <a href="../../../Dollars/MP/StatHolidays/D_MP_Stat_TradeDays.html">[Stat Holidays - Trade Days Adj]</a>
+        + <a href="../../../Dollars/MP/OtherAllow/D_MP_othAllw_TradeDays.html">[Sh Diff, WE Prem & Others - Trade Days Adj]</a>       
         </b></i>
-    </p>														
+    </p>													
 </body>	
