--- a/Driver/YOY/CD/YOY_CD_Wage.html
+++ b/Driver/YOY/CD/YOY_CD_Wage.html
@@ -52,25 +52,23 @@
     <Table class = "style2">
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Tab:</b></td>
-          <td class = "style3">ByGM</td></tr>
+          <td class = "style3">Driver</td></tr>
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Table:</b></td>
-          <td class = "style3">Mail Processing</td></tr>								
+          <td class = "style3">Collection & Delivery</td></tr>								
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Line Item:</b></td>
-          <td class = "style3">  Plant Performance & Labour Mix </td></tr>	
+          <td class = "style3">  Wage Increase </td></tr>	
         <tr class = "style2">
             <td class = "style3" align = "right"><b>Data Type:</b></td>
             <td class = "style3"> YOY Dollars  </td></tr>	
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="../../../Dollars/MP/HoursWorked/D_MP_HrWk_PlantHW.html">[Plant (Hours Worked) - Hours Worked]</a>
-        + <a href="../../../Dollars/MP/Absences/D_MP_PdAbs_PlantHW.html">[Plant (Hours Worked) - Absences]</a>
-        + <a href="../../../Dollars/MP/Vacation/D_MP_Vac_PlantHW.html">[Plant (Hours Worked) - Vacation]</a>
-        + <a href="../../../Dollars/MP/Training+UnionLeaves/D_MP_Train_PlantHW.html">[Plant (Hours Worked) - Training & Union Leaves]</a>
-        + <a href="../../../Dollars/MP/StatHolidays/D_MP_Stat_PlantHW.html">[Plant (Hours Worked) - Stat Holidays]</a>
-        + <a href="../../../Dollars/MP/OtherAllow/D_MP_othAllw_PlantHW.html">[Plant (Hours Worked) - Sh Diff, WE Prem & Others]</a>       
+        <i>Value = <b><a href="../../../Dollars/MP/HoursWorked/D_MP_HrWk_Wage.html">[Hours Worked - Wage Increase]</a>
+        + <a href="../../../Dollars/MP/Absences/D_MP_PdAbs_Wage.html">[Absences - Wage Increase]</a>
+        + <a href="../../../Dollars/MP/Vacation/D_MP_Vac_Wage.html">[Vacation - Wage Increase]</a>
+        + <a href="../../../Dollars/MP/Training+UnionLeaves/D_MP_Train_Wage.html">[Training & Union Leaves - Wage Increase]</a>   
+        + <a href="../../../Dollars/MP/StatHolidays/D_MP_Stat_Wage.html">[Stat Holidays - Wage Increase]</a>   
         </b></i>
     </p>														
 </body>	
-</html>
