--- a/Driver/YOY/CD/YOY_CD_Days.html
+++ b/Driver/YOY/CD/YOY_CD_Days.html
@@ -64,12 +64,14 @@
             <td class = "style3"> YOY Dollars  </td></tr>	
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="../../../Dollars/MP/HoursWorked/D_MP_HrWk_Days.html">[Hours Worked - Days Adjustments]</a>
-        + <a href="../../../Dollars/MP/Absences/D_MP_PdAbs_Days.html">[Absences - Days Adjustments]</a>
-        + <a href="../../../Dollars/MP/Vacation/D_MP_Vac_Days.html">[Vacation - Days Adjustments]</a>
-        + <a href="../../../Dollars/MP/Training+UnionLeaves/D_MP_Train_Days.html">[Training & Union Leaves - Days Adjustments]</a>
-        + <a href="../../../Dollars/MP/StatHolidays/D_MP_Stat_Days.html">[Stat Holidays - Days Adjustments]</a>
-        + <a href="../../../Dollars/MP/OtherAllow/D_MP_othAllw_NPHW.html">[Sh Diff, WE Prem & Others - Days Adjustments]</a>       
+        <i>Value = <b><a href="../../../Dollars/CD/HoursWorked/D_CD_HrWk_Days.html">[Hours Worked - Days Adjustments]</a>
+        + <a href="../../../Dollars/CD/Absences/D_CD_PdAbs_Days.html">[Absences - Days Adjustments]</a>
+        + <a href="../../../Dollars/CD/Vacation/D_CD_Vac_Days.html">[Vacation - Days Adjustments]</a>
+        + <a href="../../../Dollars/CD/Training+UnionLeaves/D_CD_Train_Days.html">[Training & Union Leaves - Days Adjustments]</a>
+        + <a href="../../../Dollars/CD/StatHolidays/D_CD_Stat_Days.html">[Stat Holidays - Days Adjustments]</a>
+        + <a href="../../../Dollars/CD/Route/D_CD_Route_Days.html">[Over Assessed Routes - Days Adjustments]</a>    
+        + <a href="../../../Dollars/CD/RestBG/D_CD_RestBG_Days.html">[Rest Period and B&G - Days Adjustments]</a>    
+        + <a href="../../../Dollars/CD/OtherAllow/D_CD_othAllw_NPHW.html">[Sh Diff, WE Prem & Others - Days Adjustments]</a>       
         </b></i>
     </p>													
 </body>	
