--- a/Driver/YOY/CD/YOY_CD_MSCRest.html
+++ b/Driver/YOY/CD/YOY_CD_MSCRest.html
@@ -61,15 +61,15 @@
           <td class = "style3">MSC Restructures</td></tr>	
         <tr class = "style2">
             <td class = "style3" align = "right"><b>Data Type:</b></td>
-            <td class = "style3"> YOY Dollars  </td></tr>	
+            <td class = "style3">YOY Dollars</td></tr>	
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="../../../Dollars/MP/HoursWorked/D_MP_HrWk_Days.html">[Hours Worked - Days Adjustments]</a>
-        + <a href="../../../Dollars/MP/Absences/D_MP_PdAbs_Days.html">[Absences - Days Adjustments]</a>
-        + <a href="../../../Dollars/MP/Vacation/D_MP_Vac_Days.html">[Vacation - Days Adjustments]</a>
-        + <a href="../../../Dollars/MP/Training+UnionLeaves/D_MP_Train_Days.html">[Training & Union Leaves - Days Adjustments]</a>
-        + <a href="../../../Dollars/MP/StatHolidays/D_MP_Stat_Days.html">[Stat Holidays - Days Adjustments]</a>
-        + <a href="../../../Dollars/MP/OtherAllow/D_MP_othAllw_NPHW.html">[Sh Diff, WE Prem & Others - Days Adjustments]</a>       
+        <i>Value = <b><a href="../../../Dollars/CD/HoursWorked/D_CD_HrWk_MSCRest.html">[Hours Worked - MSC Restructures]</a>
+        + <a href="../../../Dollars/CD/Absences/D_CD_PdAbs_MSCRest.html">[Absences - MSC Restructures]</a>
+        + <a href="../../../Dollars/CD/Vacation/D_CD_Vac_MSCRest.html">[Vacation - MSC Restructures]</a>
+        + <a href="../../../Dollars/CD/Training+UnionLeaves/D_CD_Train_MSCRest.html">[Training & Union Leaves - MSC Restructures]</a>
+        + <a href="../../../Dollars/CD/StatHolidays/D_CD_Stat_MSCRest.html">[Stat Holidays - MSC Restructures]</a>
+        + <a href="../../../Dollars/CD/RestBG/D_CD_RestBG_MSCRest.html">[Rest Period and B&G - MSC Restructures]</a>       
         </b></i>
     </p>													
 </body>	
