--- a/Dollars/MP/NonHrsPmt/D_MP_NonHrsPmt_RR.html
+++ b/Dollars/MP/NonHrsPmt/D_MP_NonHrsPmt_RR.html
@@ -71,7 +71,7 @@
         - <a href="../../../Reference/Dollars.html">[TY Dollars]</a> 
         + <a href="../../../Reference/Adjustments.html">[Adjustments]</a> </b></i>	
   </p>																													
-  <TABLE BORDER="1" CELLPADDING="2" CELLSPACING="0">															
+  <TABLE>															
     <tr>	<td>	<i>Name</i>	</td>	
       <td>	<i>Fiscal Year</i>	</td>	
       <td>	<i>GLCE Group</i>	</td>	
