--- a/Driver/YOY/MP/YOY_MP_Grievances.html
+++ b/Driver/YOY/MP/YOY_MP_Grievances.html
@@ -65,6 +65,7 @@
       </Table>														
     <p class = "eq">
         <i>Value = <b><a href="../../../Dollars/MP/OthLab/D_MP_OthLab_RR.html">[Other Labour - Residual Rate & Allowances]</a>
+            + <a href="../../../Dollars/MP/HHBonus/D_MP_HHBonus_RR.html">[Householder Bonus - Residual Rate & Allowances]</a>
         </b></i>
     </p>														
 </body>	
