--- a/Driver/YOY/MP/YOY_MP_STDP.html
+++ b/Driver/YOY/MP/YOY_MP_STDP.html
@@ -58,13 +58,61 @@
           <td class = "style3">Mail Processing</td></tr>								
         <tr class = "style2">
           <td class = "style3" align = "right"><b>Line Item:</b></td>
-          <td class = "style3"> STDP PD Payout / Accrual</td></tr>		
+          <td class = "style3">STDP PD Payout / Accrual</td></tr>		
         <tr class = "style2">
             <td class = "style3" align = "right"><b>Data Type:</b></td>
-            <td class = "style3"> YOY Dollars  </td></tr>
+            <td class = "style3">YOY Dollars</td></tr>
       </Table>														
     <p class = "eq">
-        <i>Value = <b><a href="../../../Dollars/MP/NonHrsPmt/D_MP_NonHrsPmt_RR.html">[Non Hours Payments - Residual Rate & Allowances]</a>
-        </b></i>
-    </p>														
+        <i>Value = <b>	<a href="../../../Reference/Dollars.html">[LY Dollars]</a> 
+            - <a href="../../../Reference/Dollars.html">[TY Dollars]</a> 
+            + <a href="../../../Reference/Adjustments.html">[Adjustments]</a> </b></i>	
+    </p>
+    <TABLE>															
+        <tr>	
+            <td>	<i>Name</i>	</td>	
+            <td>	<i>Fiscal Year</i>	</td>	
+            <td>	<i>GLCE Group</i>	</td>	
+            <td>	<i>Act Group</i>	</td>	
+            <td>	<i>Driver</i>	</td>	
+            <td>  <i>Hours or Non Hours Related</i></td>
+            <td>  <i>Hours or Dollars</i></td>
+        </tr>
+        <tr>	
+            <td>	[TY Dollars]	</td>	
+            <td>  TY	</td>	
+            <td>  STDP </td>	
+            <td>  MP	</td>	
+            <td>  n/a </td>
+            <td>  Non Hours Related </td>
+            <td>  n/a </td>
+        </tr>
+        <tr>	
+            <td>	[LY Dollars]	</td>	
+          <td>  LY	</td>	
+          <td>  STDP	</td>
+          <td>	MP	</td>
+          <td>  n/a </td>	
+          <td>  Non Hours Related </td>
+          <td>  n/a </td>
+        </tr>
+        <tr>	
+            <td>	[Adjustments]	</td>	
+          <td>  TY	</td>	
+          <td>  STDP	</td>
+          <td>	MP	</td>	
+          <td>  All </td>	
+          <td>  n/a </td>
+          <td>  Dollars </td>
+        </tr>
+      </table>								
+      <p>															
+        <b>Further Links:</b>	
+        <br>														
+        <a href="../../../Reference/GLCEGrp_Dollars.html">[GLCE Group]</a>
+        <br>														
+        <a href="../../../Reference/HoursNonHoursSplit.html">[Hours vs Non Hours Split]</a>	
+        <br>
+        <a href="../../../Reference/ActGrp.html">[Act Group]</a>																			
+      </p>															
 </body>	
